ver 0.22 (not yet released)
* protocol
  - "findadd"/"searchadd"/"searchaddpl" support the "sort" and
    "window" parameters
* tags
  - new tag "Grouping" (for ID3 "TIT1")
* input
  - ffmpeg: allow partial reads
* filter
  - ffmpeg: new plugin based on FFmpeg's libavfilter library
  - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback

ver 0.21.10 (not yet released)
* fix crash bug (0.21.9 regression)

ver 0.21.9 (2019/05/20)
* input
  - buffer: fix deadlock bug
* Android
  - fix crash on ARMv7
  - request storage permission on Android 6+
* fix spurious "single" mode bug

ver 0.21.8 (2019/04/23)
* input
  - smbclient: download to buffer instead of throttling transfer
* output
  - httpd: add missing mutex lock
  - httpd: fix use-after-free bug
* playlist
  - soundcloud: fix "Unsupported URI scheme" (0.21.6 regression)
* fix Bonjour bug
* fix build failure with GCC 9
* fix build failure with -Ddatabase=false
* systemd: add user socket unit
* doc: "list file" is deprecated

ver 0.21.7 (2019/04/03)
* input
  - qobuz/tidal: scan tags when loading a playlist
* require Meson 0.49.0 for native libgcrypt-config support
* fix build failure with -Dlocal_socket=false
* Haiku
  - fix build
  - add version info

ver 0.21.6 (2019/03/17)
* protocol
  - allow loading playlists specified as absolute filesystem paths
  - fix negated filter expressions with multiple tag values
  - fix "list" with filter expression
  - omit empty playlist names in "listplaylists"
* input
  - cdio_paranoia: fix build failure due to missing #include
* decoder
  - opus: fix replay gain when there are no other tags
  - opus: fix seeking to beginning of song
  - vorbis: fix Tremor conflict resulting in crash
* output
  - pulse: work around error with unusual channel count
  - osx: fix build failure
* playlist
  - flac: fix use-after-free bug
* support abstract sockets on Linux
* Windows
  - remove the unused libwinpthread-1.dll dependency
* Android
  - enable SLES power saving mode
