@@ -6,6 +6,8 @@ ver 0.22 (not yet released)
   - new tag "Grouping" (for ID3 "TIT1")
 * input
   - ffmpeg: allow partial reads
+* archive
+  - iso9660: support seeking
 * filter
   - ffmpeg: new plugin based on FFmpeg's libavfilter library
   - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
